kubernetes/apps/downloads/jellyfin/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: downloads
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-data
          persistentVolumeClaim:
            claimName: nas-media
      # The settings below have been marked out and can be used when removing the "#"
      # - name: device-vcsm # Only needed if you want to use your Raspberry Pi MMAL video decoding (Enabled as OpenMax H264 decode in gui settings).
      #   hostPath:
      #     path: /dev/vcsm
      # - name: device-vchiq  #Only needed if you want to use your Raspberry Pi OpenMax video encoding.
      #   hostPath:
      #    path: /dev/vchiq
      # - name: device-video10  #Only needed if you want to use your Raspberry Pi V4L2 video encoding.
      #   hostPath:
      #     path: /dev/video10
      # - name: device-video11  #Only needed if you want to use your Raspberry Pi V4L2 video encoding.
      #   hostPath:
      #     path: /dev/video11
      # - name: device-video12  #Only needed if you want to use your Raspberry Pi V4L2 video encoding.
      #   hostPath:
      #      path: /dev/video12
      containers:
        - env:
            - name: JELLYFIN_PublishedServerUrl
              value: 192.168.0.107 # The IP number for your jellyfin server (see service config)
            - name: PGID
              value: "1000" # < ASCII code for '65541'
            - name: PUID
              value: "1000" #< ACII code for '1044'
            - name: TZ
              value: Europe/Amsterdam
          securityContext:
            privileged: true # Container must run as privileged inside of the pod, required for hardware acceleration
          image: ghcr.io/linuxserver/jellyfin
          imagePullPolicy: Always
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http-tcp
              protocol: TCP
            - containerPort: 8920
              name: https-tcp
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 7359
              name: discovery-udp
              protocol: UDP
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /data/nas-media
              name: jellyfin-data
          # Below are the path to mount devices for hardware acceleration
          # The settings below have been marked out and can be used when removing the "#"
          # - mountPath: /dev/vcsm
          #   name: device-vcsm
          # - mountPath: /dev/vchiq
          #   name: device-vchiq
          # - mountPath: /dev/video10
          #   name: device-video10
          # - mountPath: /dev/video11
          #   name: device-video11
          # - mountPath: /dev/video12
          #   name: device-video12
      dnsPolicy: ClusterFirst
      restartPolicy: Always
